# decentralized-p2p

./: README.md  conftest.py  main.py  pyproject.toml
.data/: B.json  peer-A.json  peer-B.json  peer-C.json
cli/: main.py
crdt/: engine.py  local_ops_helper.py  types.py
nat/: ice_agent.py  stun_client.py
net/: peer_directory.py  session_manager.py  tcp_agent.py
p2p/proto/: crdt_pb2.py  messages_pb2.py  sync_pb2.py
p2p/proto/proto/: messages_pb2.py
proto/: crdt.proto  messages.proto  multi.proto  multi_pb2.py  sync.proto
scripts/: ice_two_peer_demo.py  manual_mesh.py  manual_signal.py  p2p_node.py  print_metrics.py  scale_mesh.py
sync/: anti_entropy.py  bootstrap.py  dedupe.py  engine_adapter.py  gossip.py  gossip_sync.py  membership.py  peer_manager.py  sync_logic.py
tests/: test_crdt.py  test_crdt_network.py  test_crdt_serialization.py  test_gossip_inmemory.py  test_ice.py  test_proto.py  test_sync.py  test_sync_protocol.py
util/: log.py  metrics.py  storage.py
