[project]
name = "p2p"
version = "0.1.0"
description = "P2P file-sharing and synchronization platform with NAT traversal and CRDT-based sync"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "NIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "protobuf (>=6.31.1,<7.0.0)",
    "msgpack (>=1.1.1,<2.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "aioice (>=0.10.1,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
grpcio-tools = "^1.74.0"
protobuf = "^6.32.0"

